--- a/cwiczenia8_mp-s23525b/appsettings.json
+++ b/cwiczenia8_mp-s23525b/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Data Source=db-mssql;Initial Catalog=2019SBD;Integrated Security=True"
+    
+  }
 }
